--- a/hw_1_python_basics.ipynb
+++ b/hw_1_python_basics.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
      "output_type": "stream",
      "text": [
       "введите название месяца рождения\n",
-      "ЯНВАрь\n",
+      "январь\n",
       "введите день рождения\n",
       "4\n",
       "Козерог\n"
@@ -133,29 +133,29 @@
     "print('введите день рождения')\n",
     "day = int(input())\n",
     "\n",
-    "if (m =='март' and day>=21 and day <=31) or (m =='апрель' and day <=20 and day >=1):\n",
+    "if (m =='март' and 21<=day<=31) or (m =='апрель' and 1<=day<=20):\n",
     "    print('Овен')\n",
-    "elif (m =='апрель' and day>=21 and day <=30) or (m =='май' and day <=21 and day >=1):\n",
+    "elif (m =='апрель' and 21<=day<=30) or (m =='май' and 1<=day<=21):\n",
     "    print('Телец')\n",
-    "elif (m =='май' and day>=22 and day <=31) or (m =='июнь' and day <=21 and day >=1):\n",
+    "elif (m =='май' and 22<=day<=31) or (m =='июнь' and 1<=day<=21):\n",
     "    print('Близнецы')\n",
-    "elif (m =='июнь' and day>=22 and day <=30) or (m =='июль' and day <=22 and day >=1):\n",
+    "elif (m =='июнь' and 22<=day<=30) or (m =='июль' and 1<=day<=22):\n",
     "    print('Рак')\n",
-    "elif (m =='июль' and day>=23 and day <=31) or (m =='август' and day <=21 and day >=1):\n",
+    "elif (m =='июль' and 23<=day<=31) or (m =='август' and 1<=day<=21):\n",
     "    print('Лев')\n",
-    "elif (m =='август' and day>=22 and day <=31) or (m =='сентябрь' and day <=23 and day >=1):\n",
+    "elif (m =='август' and 22<=day<=31) or (m =='сентябрь' and 1<=day<=23):\n",
     "    print('Дева')\n",
-    "elif (m =='сентябрь' and day>=24 and day <=30) or (m =='октябрь' and day <=23 and day >=1):\n",
+    "elif (m =='сентябрь' and 24<=day<=30) or (m =='октябрь' and 1<=day<=23):\n",
     "    print('Весы')\n",
-    "elif (m =='октябрь' and day>=24 and day <=31) or (m =='ноябрь' and day <=22 and day >=1):\n",
+    "elif (m =='октябрь' and 24<=day<=31) or (m =='ноябрь' and 1<=day<=22):\n",
     "    print('Скорпион')\n",
-    "elif (m =='ноябрь' and day>=22 and day <=30) or (m =='декабрь' and day <=22 and day >=1):\n",
+    "elif (m =='ноябрь' and 23<=day<=30) or (m =='декабрь' and 1<=day<=22):\n",
     "    print('Стрелец')\n",
-    "elif (m =='декабрь' and day>=23 and day <=31) or (m =='январь' and day <=20 and day >=1):\n",
+    "elif (m =='декабрь' and 23<=day<=31) or (m =='январь' and 1<=day<=20):\n",
     "    print('Козерог')\n",
-    "elif (m =='январь' and day>=21 and day <=31) or (m =='февраль' and day <=19 and day >=1):\n",
+    "elif (m =='январь' and 21<=day<=31) or (m =='февраль' and 1<=day<=19):\n",
     "    print('Водолей')\n",
-    "elif (m =='февраль' and day>=20 and day <=29) or (m =='март' and day <=20 and day >=1):\n",
+    "elif (m =='февраль' and 20<=day<=29) or (m =='март' and 1<=day<=20):\n",
     "    print('Рыбы')\n",
     "else:\n",
     "    print('Вы ошиблись при вводе месяца или дня, попробуйте еще раз')"
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -228,8 +228,8 @@
      "output_type": "stream",
      "text": [
       "введите номер билета\n",
-      "123456\n",
-      "Несчастливый билет\n"
+      "123321\n",
+      "Счастливый билет\n"
      ]
     }
    ],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -276,12 +276,14 @@
      "output_type": "stream",
      "text": [
       "Введите тип фигуры\n",
-      "прямоугольник\n",
+      "треугольник\n",
       "Введите длину стороны A\n",
-      "3\n",
+      "2\n",
       "Введите длину стороны B\n",
-      "4\n",
-      "Площадь прямоугольника: 12.0\n"
+      "3\n",
+      "Введите длину стороны C\n",
+      "1\n",
+      "Площадь треугольника: 0.0\n"
      ]
     }
    ],
